<resources>
    <string name="app_name">EventsPrueba3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_update_event">Actualizar</string>
    <string name="tv_edit_title">Editar Evento</string>
    <string name="dialog_delete_title">¿Eliminar evento?</string>
    <string name="dialog_delete_confirm">Eliminar</string>
    <string name="dialog_delete_cancel">Cancelar</string>
    <string name="fab_add_event">Añadir evento</string>
    <string name="event_date">%1$d/%2$d/%3$d</string>
    <string name="helper_text_required">Requerido</string>
    <string name="edit_store_save_message_valid">Revisa los campos requeridos</string>
    <string name="btn_back">Volver atrás</string>
    <string name="tv_event_create">Crear evento</string>
    <string name="til_hint_event_name">Nombre del evento</string>
    <string name="til_hint_event_description">Descripción del evento</string>
    <string name="til_hint_event_date">Fecha del evento</string>
    <string name="tv_add_image">Ingresa imagen del evento</string>
    <string name="img_selected_image">Imagen del evento añadida</string>
    <string name="img_btn_add_img">Añadir imagen del evento</string>
    <string name="btn_event_create">Crear</string>
    <string name="btn_event_delete">Eliminar</string>


</resources>